fixed whitespace

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,7 +20,7 @@
 } */
 
 #main-footer-container {
-  width: 100%;
+  width: 100vw;
   height: auto;
   background-color: #F6F0D5;
 }
@@ -29,7 +29,8 @@
   display: flex;
   margin: 0px auto;
   margin-top: 60px;
-  width: 1183px;
+  width: 100%;
+  padding: 0px 140px;
   flex-direction: column;
   align-items: center;
   gap: 76px;
@@ -38,7 +39,7 @@
 #location-hours-container {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
   align-self: stretch;
 }
 
@@ -116,7 +117,7 @@
 
 #bottom-nav-links {
   width: 100%;
-  max-width: 1193px;
+  /* max-width: 1193px; */
   margin: 0 auto;
   box-sizing: border-box;
   display: flex;
