--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0px;
-  background-color: #FFFFFF;
-}
+html, body {
+  margin: 0;
+  padding: 0;
+}  
 
 li {
   list-style-type: none;
@@ -17,7 +17,7 @@ a {
 
 #main-content-container {
   display: flex;
-  width: 100%;
+  width: 100vw;
   flex-direction: column;
   align-items: center;
   gap: 128px;
